storage/xtradb/buf/buf0dblwr.cc
@@ -616,7 +616,7 @@ buf_dblwr_process()
 		if (page_no == 0) {
 			/* Check the FSP_SPACE_FLAGS. */
 			ulint flags = fsp_header_get_flags(page);
-			if (!fsp_flags_is_valid(flags)
+			if (!fsp_flags_is_valid(flags, space_id)
 			    && fsp_flags_convert_from_101(flags)
 			    == ULINT_UNDEFINED) {
 				ib_logf(IB_LOG_LEVEL_WARN,
